# seshat

./: CMakeLists.txt  README.md
modules/: Seshat.cmake  SeshatGeneral.cmake
package/: SeshatConfig.cmake.in
test/: CMakeLists.txt  Test_auto_create_missing_sources.cmake  Test_create_missing_sources.cmake
test/auto_create_missing_sources/source/: CMakeLists.txt  existing1.c
test/create_missing_sources/source/: CMakeLists.txt
test/general/option_with_once/: CMakeLists.txt  test-defaults.cmake
